--- a/app/globals.css
+++ b/app/globals.css
@@ -12,15 +12,17 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
+  margin: 0;
+  min-height: 100vh;
+
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+
+  /* dog pattern */
+  background-image: url("../assets/dog.png");
+  background-repeat: repeat;
+  background-size: 50px auto;
+  background-repeat: space; /* 👈 adds space between dogs */
+  background-position: center center;
 }
